frontend/k8s/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: loan-frontend
  namespace: loan-app
  labels:
    app: loan-frontend
    app.kubernetes.io/component: loan-frontend
    app.kubernetes.io/instance: loan-frontend
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: loan-frontend
